# general_class_balancer

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml  update_precommit_hooks.yml
general_class_balancer/: __init__.py  general_class_balancer.py
general_class_balancer/tests/: random_example_test.py
